@@ -1611,6 +1611,34 @@ def test_funcarg_lookup_error(testdir):
     ])
     assert "INTERNAL" not in result.stdout.str()
 
+
+def test_funcarg_fixture_discovery_failure_issue214(testdir):
+    # some proxy objects raise RuntimeError on getattr
+    # for example flask.request
+    p = testdir.makepyfile("""
+
+        class EvilObject(object):
+            def __call__(self): 
+                #needed to trick discovery
+                pass
+            def __getattr__(self, arg):
+                raise RuntimeError('uhm ' + arg)
+
+
+        fixture = EvilObject()
+        
+        def test_1():
+            pass
+    """)
+    result = testdir.runpytest('--fulltrace')
+    result.stdout.fnmatch_lines([
+        '*1 passed*'
+    ])
+    assert "INTERNAL" not in result.stdout.str()
+    assert "ERROR" not in result.stdout.str()
+        
+
+
 class TestReportInfo:
     def test_itemreport_reportinfo(self, testdir, linecomp):
         testdir.makeconftest("""
